fix:overflow scrolling in puck

--- a/apps/web/app/[projectId]/edit/style.css
+++ b/apps/web/app/[projectId]/edit/style.css
@@ -24,7 +24,8 @@
 }
 
 .puckContainer > div {
-    height: 100%;
+    display: flex;
+    flex: 1;
 }
 
 #switch {
